>> handle \n in cell input, and with autowrap
handle undoing changes in row height produced by string input
fix old sc bug - issue #371
changed input bar from window to pad: permits entering string longer than COLS
fix when saving sc files of cells that has some string expressions - issue #541
@count counts cells with strings as well, and not just with numbers
ignore SIGWINCH outside ncurses


Pending
-------
in csv import: handle \n inside csv values to increase rows height
handle content alignment over multiple lines in cmds.c:pad_and_align

test calc_offscr_rows and calc_offscr_cols
check all cmds movement functions after new frozen mods
remove old references to freezer / freezec

save offscr_sc_rows, offscr_sc_cols, COLS and LINES values when saving file
show_shorthelp
show_cmd
notimeout
edit!

restore comments
handle mouse clicks in edition mode.

Rethink LUA evaluation!
format MODE?

--
Thanks to all that helped and created PR.
Thanks to all who support and use this program.

Andrés Martinelli
andmarti1424


***********
v0.8.1
Released April 1st 2021

New features
------------
Braille support
Added latex export - issue #394
Added mappings for command mode
Work on issues #225 and #247: support mapping of ñ and other special chars
Basic ODS file import
Paste to a range of selected cells - (actually added on v0.8 - issue 438 - PR 445)
Added txtdelim | for csv files import - issue 409
Added macros to --version (show version)
Support higher versions of lua.
Handle ESC key in mappings. related to issue #492.
Added freeze to visual mode - issue #459

Changes
--------
Recognise SPACE in mappings rather than simple ' '
Visual change: Moved cmd multiplier to the left of mode
Changed default headings colors
many improvements to the config facility and usage - PR 519
improved sort for 65k rows

Fixes
-----
Fix issues on CIRCULAR REFERENCES: #473 #201 #475 #321. these were as hard.
Fix issue 417 and added a date type in xlsx import.